--- a/package.json
+++ b/package.json
@@ -9,14 +9,17 @@
     "@testing-library/user-event": "^13.5.0",
     "chart.js": "^4.5.1",
     "chartjs-plugin-datalabels": "^2.2.0",
+    "konva": "^10.0.12",
     "react": "^19.2.1",
     "react-chartjs-2": "^5.3.1",
     "react-dom": "^19.2.1",
     "react-icons": "^5.5.0",
+    "react-konva": "^19.2.1",
     "react-modal": "^3.16.3",
     "react-router-dom": "^7.10.1",
     "react-scripts": "5.0.1",
     "recharts": "^3.6.0",
+    "use-image": "^1.1.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
